--- a/index.html
+++ b/index.html
@@ -1,11 +1,327 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jornada</title>
+    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
+
 <body>
-    <h1>Jornada</h1>
+    <div class="cabecalho__container">
+        <div class="cabecalho">
+            <a href="" class="cabecalho__logo">
+                <img class="cabecalho__logo--icone" alt="" src="./public/logoprovisriabranca-1@2x.png" />
+            </a>
+            <div class="cabecalho__navegacao">
+                <a class="cabecalho__navegacao--item" href="">Blog</a>
+                <a class="cabecalho__navegacao--item" href="">Pacotes de viagem</a>
+                <a class="cabecalho__navegacao--item" href="">Contato</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="banner">
+        <div class="banner__wrapper">
+            <img class="banner__img" alt="" src="./public/maldivas@2x.png" />
+            <div class="banner__descricao">
+                Somos uma agência apaixonada por criar viagens inesquecíveis. Do
+                destino à seleção das atividades, cuidamos de todos os detalhes
+                para que você aproveite ao máximo cada momento da sua jornada!
+            </div>
+        </div>
+    </div>
+    <div class="container">
+
+        <div class="ofertas">
+            <div class="ofertas__titulo">
+                <div class="ofertas__titulo--texto">Ofertas da semana</div>
+                <div class="ofertas__titulo--sublinhado"></div>
+            </div>
+            <div class="ofertas__cards">
+                <div class="ofertas__cards--grupo">
+                    <div class="ofertas__cards--item ofertas__cards--japao">
+                        <div class="ofertas__card">
+                            <div class="ofertas__card--conteudo">
+                                <div class="ofertas__card--destino">
+                                    <div class="ofertas__card--destino-tipo">HOTEL+AÉREO</div>
+                                    <b class="ofertas__card--destino-nome">Japão</b>
+                                </div>
+                                <div class="ofertas__card--preco">R$ 4000</div>
+                                <div class="ofertas__card--botao">
+                                    <span class="ofertas__card--botao-texto">Ver detalhes</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ofertas__cards--item  ofertas__cards--san-andreas">
+                        <div class="ofertas__card">
+                            <div class="ofertas__card--conteudo">
+                                <div class="ofertas__card--destino">
+                                    <div class="ofertas__card--destino-tipo">HOTEL+AÉREO</div>
+                                    <b class="ofertas__card--destino-nome">San Andreas</b>
+                                </div>
+                                <div class="ofertas__card--preco">R$ 3000</div>
+                                <div class="ofertas__card--botao">
+                                    <span class="ofertas__card--botao-texto">Ver detalhes</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ofertas__cards--item  ofertas__cards--paraiba">
+                        <div class="ofertas__card">
+                            <div class="ofertas__card--conteudo">
+                                <div class="ofertas__card--destino">
+                                    <div class="ofertas__card--destino-tipo">ALL INCLUSIVE+AÉREO</div>
+                                    <b class="ofertas__card--destino-nome">Paraíba</b>
+                                </div>
+                                <div class="ofertas__card--preco">R$ 1200</div>
+                                <div class="ofertas__card--botao">
+                                    <span class="ofertas__card--botao-texto">Ver detalhes</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ofertas__cards--item  ofertas__cards--manaus">
+                        <div class="ofertas__card">
+                            <div class="ofertas__card--conteudo">
+                                <div class="ofertas__card--destino">
+                                    <div class="ofertas__card--destino-tipo">ALL INCLUSIVE+AÉREO</div>
+                                    <b class="ofertas__card--destino-nome">Manaus</b>
+                                </div>
+                                <div class="ofertas__card--preco">R$ 1600</div>
+                                <div class="ofertas__card--botao">
+                                    <span class="ofertas__card--botao-texto">Ver detalhes</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="busca">
+            <div class="busca__titulo">
+                <div class="divusca__titulo--texto">Busque por Categoria</div>
+                <div class="busca__titulo--sublinhado"></div>
+            </div>
+            <div class="busca__categorias">
+                <div class="busca__categoria">
+                    <div class="busca__categoria--icone">
+                        <span class="material-symbols-outlined">
+                            hiking
+                        </span>
+                    </div>
+                    <b class="busca__categoria--nome">Pacotes Nacionais</b>
+                </div>
+                <div class="busca__categoria">
+                    <div class="busca__categoria--icone">
+                        <span class="material-symbols-outlined">
+                            flight
+                        </span>
+                    </div>
+                    <b class="busca__categoria--nome">Pacotes Internacionais</b>
+                </div>
+                <div class="busca__categoria">
+                    <div class="busca__categoria--icone">
+                        <span class="material-symbols-outlined">
+                            airport_shuttle
+                        </span>
+                    </div>
+                    <b class="busca__categoria--nome">Transfer</b>
+                </div>
+                <div class="busca__categoria">
+                    <div class="busca__categoria--icone">
+                        <span class="material-symbols-outlined">
+                            vpn_lock
+                        </span>
+                    </div>
+                    <b class="busca__categoria--nome">Seguro Viagem</b>
+                </div>
+            </div>
+        </div>
+
+        <div class="destinos">
+            <div class="destinos__titulo">
+                <div class="destinos__titulo--texto">Destinos Populares</div>
+                <div class="destinos__titulo--sublinhado"></div>
+            </div>
+            <div class="destinos__lista">
+                <div class="destinos__item">
+                    <img class="destinos__item--image" alt="" src="./public/tokyo@2x.png" />
+                    <b class="destinos__item--nome">Tokyo</b>
+                    <div class="destinos__item--descricao">
+                        Tóquio é uma cidade vibrante e cosmopolita, com seus templos
+                        históricos, museus de arte moderna e arranha-céus icônicos.
+                        Não perca a chance de mergulhar em sua atmosfera fascinante.
+                    </div>
+                    <div class="destinos__item--botao-container">
+                        <div class="destinos__item--botao">
+                            <span class="destinos__item--botao-texto">Ver detalhes</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="destinos__item">
+                    <img class="destinos__item--image" alt="" src="./public/osaka@2x.png" />
+                    <b class="destinos__item--nome">Osaka</b>
+                    <div class="destinos__item--descricao">
+                        Osaka é uma cidade agitada e moderna no Japãos. A cidade é
+                        famosa por sua gastronomia deliciosa e por ser um excelente
+                        ponto de partida para explorar outras cidades japonesas
+                        próximas.
+                    </div>
+                    <div class="destinos__item--botao-container">
+                        <div class="destinos__item--botao">
+                            <span class="destinos__item--botao-texto">Ver detalhes</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="pagamento">
+            <div class="pagamento__titulo">
+                <div class="pagamento__titulo--texto">Condições de Pagamento</div>
+                <div class="pagamento__titulo--sublinhado"></div>
+            </div>
+            <div class="pagamento__condicoes">
+                <div class="pagamento__condicoes--descricao">
+                    <dov class="pagamento__condicoes--destaque">Parcelamento em até 12x!</dov>
+                    <div class="pagamento__condicoes--detalhes">
+                        Viaje pagando em até 12 parcelas no cartão, à vista no crédito
+                        com 5% de desconto ou no Pix com 10% de desconto!
+                    </div>
+                </div>
+                <div class="pagamento__imagens">
+                    <div class="pagamento__imagens--grupo">
+                        <div class="pagamento__imagens--imagem-container">
+                            <img class="pagamento__imagens--imagem" alt="" src="./public/montagem-japo-1@2x.png" />
+                        </div>
+                        <div class="pagamento__imagens--imagem-container">
+                            <img class="pagamento__imagens--imagem" alt="" src="./public/montagem-japo-2@2x.png" />
+                        </div>
+                    </div>
+                    <div class="pagamento__imagens--imagem-destaque">
+                        <img class="pagamento__imagens--imagem" alt="" src="./public/montagem-japo-3@2x.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="depoimentos">
+            <div class="depoimentos__titulo">
+                <b class="depoimentos__titulo--texto">Depoimentos</b>
+                <div class="depoimentos__titulo--sublinhado"></div>
+            </div>
+            <div class="depoimentos__wrapper">
+                <div class="depoimentos__item">
+                    <div class="depoimentos__texto">
+                        A Jornada foi uma das melhores agências de viagens que eu
+                        já experimentei. O serviço ao cliente foi excepcional, e
+                        toda a equipe foi muito atenciosa e prestativa.
+                    </div>
+                    <div class="depoimentos__autor">
+                        <img class="depoimentos__autor--foto" src="./public/ellipse-1@2x.png" />
+                        <div class="depoimentos__autor--info">
+                            <b class="depoimentos__autor--nome">Talita Villas Boas</b>
+                            <div class="depoimentos__autor--avaliacao">
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="depoimentos__item">
+                    <div class="depoimentos__texto">
+                        Recomendo fortemente a agência de viagens Jornada. Eles
+                        oferecem um serviço personalizado e de alta qualidade que
+                        excedeu minhas expectativas em minha última viagem.
+                    </div>
+                    <div class="depoimentos__autor">
+                        <img class="depoimentos__autor--foto" alt="" src="./public/avatar-amari@2x.png" />
+                        <div class="depoimentos__autor--info">
+                            <b class="depoimentos__autor--nome">Amari Salin</b>
+                            <div class="depoimentos__autor--avaliacao">
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="depoimentos__item">
+                    <div class="depoimentos__texto">
+                        Minha viagem com a Jornada foi incrível! Recomendo muito a
+                        agência para quem busca uma experiência emocionante e
+                        personalizada.
+                    </div>
+                    <div class="depoimentos__autor">
+                        <img class="depoimentos__autor--foto" alt="" src="./public/avatar-lauro@2x.png" />
+                        <div class="depoimentos__autor--info">
+                            <b class="depoimentos__autor--nome">Lauro B. Matos</b>
+                            <div class="depoimentos__autor--avaliacao">
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <img class="pre-footer__image" alt="" src="./public/pre-footer-image@2x.png" />
+
+    <div class="footer__container">
+        <div class="footer">
+            <div class="footer__logo-container">
+                <img class="footer__logo-icon" alt="" src="./public/logobranco-1@2x.png" />
+                <div class="footer__info-container">
+                    <div class="footer__text-info">
+                        Horário de atendimento: 08h - 20h (Segunda a Sábado)
+                    </div>
+                    <div class="footer__text-info">
+                        Desenvolvido por Alura. Projeto fictício sem fins comerciais.
+                    </div>
+                </div>
+            </div>
+            <div class="footer__social-media-container">
+                <div class="footer__social-media-text">Acesse nossas redes:</div>
+                <div class="footer__social-media-icons">
+                    <a href="">
+                        <img class="footer__social-media-icon" alt="" src="./public/whatsapp-1.svg" />
+                    </a>
+                    <a href="">
+                        <img class="footer__social-media-icon" alt="" src="./public/instragam-1.svg" />
+                    </a>
+                    <a href="">
+                        <img class="footer__social-media-icon" alt="" src="./public/twiter-1.svg" />
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
