--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="cabecalho__container">
         <div class="cabecalho">
             <a href="" class="cabecalho__logo">
-                <img class="cabecalho__logo--icone" alt="" src="./public/logoprovisriabranca-1@2x.png" />
+                <img class="cabecalho__logo--icone" alt="" src="./img/logoprovisriabranca-1@2x.png" />
             </a>
             <div class="cabecalho__navegacao">
                 <a class="cabecalho__navegacao--item" href="">Blog</a>
@@ -32,7 +32,7 @@
 
     <div class="banner">
         <div class="banner__wrapper">
-            <img class="banner__img" alt="" src="./public/maldivas@2x.png" />
+            <img class="banner__img" alt="" src="./img/maldivas@2x.png" />
             <div class="banner__descricao">
                 Somos uma agência apaixonada por criar viagens inesquecíveis. Do
                 destino à seleção das atividades, cuidamos de todos os detalhes
@@ -157,7 +157,7 @@
             </div>
             <div class="destinos__lista">
                 <div class="destinos__item">
-                    <img class="destinos__item--image" alt="" src="./public/tokyo@2x.png" />
+                    <img class="destinos__item--image" alt="" src="./img/tokyo@2x.png" />
                     <b class="destinos__item--nome">Tokyo</b>
                     <div class="destinos__item--descricao">
                         Tóquio é uma cidade vibrante e cosmopolita, com seus templos
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="destinos__item">
-                    <img class="destinos__item--image" alt="" src="./public/osaka@2x.png" />
+                    <img class="destinos__item--image" alt="" src="./img/osaka@2x.png" />
                     <b class="destinos__item--nome">Osaka</b>
                     <div class="destinos__item--descricao">
                         Osaka é uma cidade agitada e moderna no Japãos. A cidade é
@@ -205,14 +205,14 @@
                 <div class="pagamento__imagens">
                     <div class="pagamento__imagens--grupo">
                         <div class="pagamento__imagens--imagem-container">
-                            <img class="pagamento__imagens--imagem" alt="" src="./public/montagem-japo-1@2x.png" />
+                            <img class="pagamento__imagens--imagem" alt="" src="./img/montagem-japo-1@2x.png" />
                         </div>
                         <div class="pagamento__imagens--imagem-container">
-                            <img class="pagamento__imagens--imagem" alt="" src="./public/montagem-japo-2@2x.png" />
+                            <img class="pagamento__imagens--imagem" alt="" src="./img/montagem-japo-2@2x.png" />
                         </div>
                     </div>
                     <div class="pagamento__imagens--imagem-destaque">
-                        <img class="pagamento__imagens--imagem" alt="" src="./public/montagem-japo-3@2x.png" />
+                        <img class="pagamento__imagens--imagem" alt="" src="./img/montagem-japo-3@2x.png" />
                     </div>
                 </div>
             </div>
@@ -231,15 +231,15 @@
                         toda a equipe foi muito atenciosa e prestativa.
                     </div>
                     <div class="depoimentos__autor">
-                        <img class="depoimentos__autor--foto" src="./public/ellipse-1@2x.png" />
+                        <img class="depoimentos__autor--foto" src="./img/ellipse-1@2x.png" />
                         <div class="depoimentos__autor--info">
                             <b class="depoimentos__autor--nome">Talita Villas Boas</b>
                             <div class="depoimentos__autor--avaliacao">
-                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" src="./img/star-1.svg" />
                             </div>
                         </div>
                     </div>
@@ -251,15 +251,15 @@
                         excedeu minhas expectativas em minha última viagem.
                     </div>
                     <div class="depoimentos__autor">
-                        <img class="depoimentos__autor--foto" alt="" src="./public/avatar-amari@2x.png" />
+                        <img class="depoimentos__autor--foto" alt="" src="./img/avatar-amari@2x.png" />
                         <div class="depoimentos__autor--info">
                             <b class="depoimentos__autor--nome">Amari Salin</b>
                             <div class="depoimentos__autor--avaliacao">
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
                             </div>
                         </div>
                     </div>
@@ -271,15 +271,15 @@
                         personalizada.
                     </div>
                     <div class="depoimentos__autor">
-                        <img class="depoimentos__autor--foto" alt="" src="./public/avatar-lauro@2x.png" />
+                        <img class="depoimentos__autor--foto" alt="" src="./img/avatar-lauro@2x.png" />
                         <div class="depoimentos__autor--info">
                             <b class="depoimentos__autor--nome">Lauro B. Matos</b>
                             <div class="depoimentos__autor--avaliacao">
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./public/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
                             </div>
                         </div>
                     </div>
@@ -289,12 +289,12 @@
         </div>
     </div>
 
-    <img class="pre-footer__image" alt="" src="./public/pre-footer-image@2x.png" />
+    <img class="pre-footer__image" alt="" src="./img/pre-footer-image@2x.png" />
 
     <div class="footer__container">
         <div class="footer">
             <div class="footer__logo-container">
-                <img class="footer__logo-icon" alt="" src="./public/logobranco-1@2x.png" />
+                <img class="footer__logo-icon" alt="" src="./img/logobranco-1@2x.png" />
                 <div class="footer__info-container">
                     <div class="footer__text-info">
                         Horário de atendimento: 08h - 20h (Segunda a Sábado)
@@ -308,13 +308,13 @@
                 <div class="footer__social-media-text">Acesse nossas redes:</div>
                 <div class="footer__social-media-icons">
                     <a href="">
-                        <img class="footer__social-media-icon" alt="" src="./public/whatsapp-1.svg" />
+                        <img class="footer__social-media-icon" alt="" src="./img/whatsapp-1.svg" />
                     </a>
                     <a href="">
-                        <img class="footer__social-media-icon" alt="" src="./public/instragam-1.svg" />
+                        <img class="footer__social-media-icon" alt="" src="./img/instragam-1.svg" />
                     </a>
                     <a href="">
-                        <img class="footer__social-media-icon" alt="" src="./public/twiter-1.svg" />
+                        <img class="footer__social-media-icon" alt="" src="./img/twiter-1.svg" />
                     </a>
                 </div>
             </div>
