--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
         </div>
     </div>
 
-    <img class="pre-footer__image" alt="" src="./img/pre-footer-image@2x.png" />
-
+    <img class="pre-footer__image" alt="" src="./img/pre-footer-image.png" />
+    
     <div class="footer__container">
         <div class="footer">
             <div class="footer__logo-container">
