--- a/index.html
+++ b/index.html
@@ -17,52 +17,63 @@
 </head>
 
 <body>
-    <div class="cabecalho__container">
+    <header class="cabecalho__container">
         <div class="cabecalho">
             <a href="" class="cabecalho__logo">
-                <img class="cabecalho__logo--icone" alt="" src="./img/logoprovisriabranca-1@2x.png" />
+                <img class="cabecalho__logo--icone" alt="Logo da Jornada" src="./img/logoprovisriabranca-1@2x.png" />
             </a>
-            <div class="cabecalho__navegacao">
-                <a class="cabecalho__navegacao--item" href="">Blog</a>
-                <a class="cabecalho__navegacao--item" href="">Pacotes de viagem</a>
-                <a class="cabecalho__navegacao--item" href="">Contato</a>
-            </div>
+            <nav class="cabecalho__navegacao" role="navigation" aria-label="Navegação principal">
+                <ul class="cabecalho__navegacao--lista">
+                    <li class="cabecalho__navegacao--item">
+                        <a href="">Blog</a>
+                    </li>
+                    <li class="cabecalho__navegacao--item">
+                        <a href="">Pacotes de viagem</a>
+                    </li>
+                    <li class="cabecalho__navegacao--item">
+                        <a href="">Contato</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
 
-    <div class="banner">
+    <section class="banner">
         <div class="banner__wrapper">
-            <img class="banner__img" alt="" src="./img/maldivas@2x.png" />
-            <div class="banner__descricao">
-                Somos uma agência apaixonada por criar viagens inesquecíveis. Do
-                destino à seleção das atividades, cuidamos de todos os detalhes
-                para que você aproveite ao máximo cada momento da sua jornada!
-            </div>
+            <figure class="banner__img-wrapper">
+                <img class="banner__img" alt="Imagem das Maldivas" src="./img/maldivas@2x.png" />
+                <figcaption class="banner__img-descricao">
+                    Somos uma agência apaixonada por criar viagens inesquecíveis. Do
+                    destino à seleção das atividades, cuidamos de todos os detalhes
+                    para que você aproveite ao máximo cada momento da sua jornada!
+                </figcaption>
+            </figure>
         </div>
-    </div>
-    <div class="container">
+    </section>
 
-        <div class="ofertas">
+    <main class="container">
+
+        <section class="ofertas">
             <div class="ofertas__titulo">
                 <div class="ofertas__titulo--texto">Ofertas da semana</div>
                 <div class="ofertas__titulo--sublinhado"></div>
             </div>
             <div class="ofertas__cards">
                 <div class="ofertas__cards--grupo">
-                    <div class="ofertas__cards--item ofertas__cards--japao">
+                    <section class="ofertas__cards--item  ofertas__cards--japao">
                         <div class="ofertas__card">
                             <div class="ofertas__card--conteudo">
-                                <div class="ofertas__card--destino">
+                                <header class="ofertas__card--destino">
                                     <div class="ofertas__card--destino-tipo">HOTEL+AÉREO</div>
-                                    <b class="ofertas__card--destino-nome">Japão</b>
-                                </div>
+                                    <h2 class="ofertas__card--destino-nome">Japão</h2>
+                                </header>
                                 <div class="ofertas__card--preco">R$ 4000</div>
                                 <div class="ofertas__card--botao">
-                                    <span class="ofertas__card--botao-texto">Ver detalhes</span>
+                                    <a href="#" class="ofertas__card--botao-texto">Ver detalhes</a>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                     <div class="ofertas__cards--item  ofertas__cards--san-andreas">
                         <div class="ofertas__card">
                             <div class="ofertas__card--conteudo">
@@ -107,7 +118,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <div class="busca">
             <div class="busca__titulo">
@@ -157,7 +168,7 @@
             </div>
             <div class="destinos__lista">
                 <div class="destinos__item">
-                    <img class="destinos__item--image" alt="" src="./img/tokyo@2x.png" />
+                    <img class="destinos__item--image" alt="Imagem de Tokyo" src="./img/tokyo@2x.png" />
                     <b class="destinos__item--nome">Tokyo</b>
                     <div class="destinos__item--descricao">
                         Tóquio é uma cidade vibrante e cosmopolita, com seus templos
@@ -171,7 +182,7 @@
                     </div>
                 </div>
                 <div class="destinos__item">
-                    <img class="destinos__item--image" alt="" src="./img/osaka@2x.png" />
+                    <img class="destinos__item--image" alt="Imagem de Osaka" src="./img/osaka@2x.png" />
                     <b class="destinos__item--nome">Osaka</b>
                     <div class="destinos__item--descricao">
                         Osaka é uma cidade agitada e moderna no Japãos. A cidade é
@@ -205,14 +216,20 @@
                 <div class="pagamento__imagens">
                     <div class="pagamento__imagens--grupo">
                         <div class="pagamento__imagens--imagem-container">
-                            <img class="pagamento__imagens--imagem" alt="" src="./img/montagem-japo-1@2x.png" />
+                            <img class="pagamento__imagens--imagem" alt="Imagem que contém itens como chapéu, folha, mala de viagem com roupa, camera, cosméticos, e chinelo em um piso na cor clara." src="./img/montagem-japo-1@2x.png" />
                         </div>
                         <div class="pagamento__imagens--imagem-container">
-                            <img class="pagamento__imagens--imagem" alt="" src="./img/montagem-japo-2@2x.png" />
+                            <img 
+                                class="pagamento__imagens--imagem" 
+                                alt="Imagem de duas mãos segurando um passaporte." 
+                                src="./img/montagem-japo-2@2x.png" />
                         </div>
                     </div>
                     <div class="pagamento__imagens--imagem-destaque">
-                        <img class="pagamento__imagens--imagem" alt="" src="./img/montagem-japo-3@2x.png" />
+                        <img 
+                            class="pagamento__imagens--imagem" 
+                            alt="Imagem de duas mulheres de costas fazendo sinal com a mão e no fundo uma paisagem." 
+                            src="./img/montagem-japo-3@2x.png" />
                     </div>
                 </div>
             </div>
@@ -251,15 +268,21 @@
                         excedeu minhas expectativas em minha última viagem.
                     </div>
                     <div class="depoimentos__autor">
-                        <img class="depoimentos__autor--foto" alt="" src="./img/avatar-amari@2x.png" />
+                        <img 
+                            class="depoimentos__autor--foto" 
+                            alt="Avatar de uma pessoa" 
+                            src="./img/avatar-amari@2x.png" />
                         <div class="depoimentos__autor--info">
                             <b class="depoimentos__autor--nome">Amari Salin</b>
                             <div class="depoimentos__autor--avaliacao">
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="Ícone de estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="Ícone de estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="Ícone de estrela" src="./img/star-1.svg" />
+                                <img class="depoimentos__autor--avaliacao-estrela" alt="Ícone de estrela" src="./img/star-1.svg" />
+                                <img 
+                                    class="depoimentos__autor--avaliacao-estrela" 
+                                    alt="Ícone de estrela" 
+                                    src="./img/star-1.svg" />
                             </div>
                         </div>
                     </div>
@@ -271,15 +294,33 @@
                         personalizada.
                     </div>
                     <div class="depoimentos__autor">
-                        <img class="depoimentos__autor--foto" alt="" src="./img/avatar-lauro@2x.png" />
+                        <img 
+                            class="depoimentos__autor--foto" 
+                            alt="Avatar de uma pessoa" 
+                            src="./img/avatar-lauro@2x.png" />
                         <div class="depoimentos__autor--info">
                             <b class="depoimentos__autor--nome">Lauro B. Matos</b>
                             <div class="depoimentos__autor--avaliacao">
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
-                                <img class="depoimentos__autor--avaliacao-estrela" alt="" src="./img/star-1.svg" />
+                                <img 
+                                    class="depoimentos__autor--avaliacao-estrela" 
+                                    alt="Ícone de estrela" 
+                                    src="./img/star-1.svg" />
+                                <img 
+                                    class="depoimentos__autor--avaliacao-estrela" 
+                                    alt="Ícone de estrela" 
+                                    src="./img/star-1.svg" />
+                                <img 
+                                    class="depoimentos__autor--avaliacao-estrela" 
+                                    alt="Ícone de estrela" 
+                                    src="./img/star-1.svg" />
+                                <img 
+                                    class="depoimentos__autor--avaliacao-estrela" 
+                                    alt="Ícone de estrela" 
+                                    src="./img/star-1.svg" />
+                                <img 
+                                    class="depoimentos__autor--avaliacao-estrela" 
+                                    alt="Ícone de estrela" 
+                                    src="./img/star-1.svg" />
                             </div>
                         </div>
                     </div>
@@ -287,20 +328,26 @@
 
             </div>
         </div>
-    </div>
+    </main>
 
-    <img class="pre-footer__image" alt="" src="./img/pre-footer-image.png" />
+    <img 
+        class="pre-footer__image" 
+        alt="Imagem de uma praia com muitos predios antigos." 
+        src="./img/pre-footer-image.png" />
     
     <div class="footer__container">
         <div class="footer">
             <div class="footer__logo-container">
-                <img class="footer__logo-icon" alt="" src="./img/logobranco-1@2x.png" />
+                <img 
+                    class="footer__logo-icon" 
+                    alt="Logo da Jornada Viagens" 
+                    src="./img/logobranco-1@2x.png" />
                 <div class="footer__info-container">
                     <div class="footer__text-info">
                         Horário de atendimento: 08h - 20h (Segunda a Sábado)
                     </div>
                     <div class="footer__text-info">
-                        Desenvolvido por Alura. Projeto fictício sem fins comerciais.
+                        Projeto fictício sem fins comerciais.
                     </div>
                 </div>
             </div>
@@ -308,13 +355,16 @@
                 <div class="footer__social-media-text">Acesse nossas redes:</div>
                 <div class="footer__social-media-icons">
                     <a href="">
-                        <img class="footer__social-media-icon" alt="" src="./img/whatsapp-1.svg" />
+                        <img 
+                            class="footer__social-media-icon" alt="Ícone do Whatsapp" src="./img/whatsapp-1.svg" />
                     </a>
                     <a href="">
-                        <img class="footer__social-media-icon" alt="" src="./img/instragam-1.svg" />
+                        <img 
+                            class="footer__social-media-icon" alt="Ícone do Instagram" src="./img/instragam-1.svg" />
                     </a>
                     <a href="">
-                        <img class="footer__social-media-icon" alt="" src="./img/twiter-1.svg" />
+                        <img 
+                            class="footer__social-media-icon" alt="Ícone do Twitter" src="./img/twiter-1.svg" />
                     </a>
                 </div>
             </div>
